Some fixes of models.

--- a/medicine_shop_project/.env
+++ b/medicine_shop_project/.env
@@ -1,1 +1,2 @@
-SECRET_KEY = 'django-insecure-ea28#^fwrn&j%36-mo)528pjgpgbrl1ctxw=g+@%d=1c7_b8y('
+EMAIL_HOST_PASSWORD = "jhBWQAv4NhpxMmiXGyEg"
+SECRET_KEY = 'ixkt6^*j$54l$j5*8&)bbkq4cc4e)bg1&n%n*_puj&n@x@&qkq'
